[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Zombie.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=3]
radius = 0.8
height = 1.19279

[sub_resource type="CylinderShape" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0, 0.607843, 1, 1 )

[sub_resource type="ParticlesMaterial" id=6]
spread = 180.0
initial_velocity = 5.0
initial_velocity_random = 1.0
angular_velocity = 360.0
angle = 360.0
angle_random = 1.0

[sub_resource type="QuadMesh" id=7]
size = Vector2( 0.1, 0.1 )

[node name="Enemy" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Stats" parent="." instance=ExtResource( 2 )]
entity_name = "Enemy"

[node name="AttaqueRange2" type="Area" parent="."]
transform = Transform( 0.72, 0, 0, 0, 1, 0, 0, 0, 0.72, 0, -0.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="AttaqueRange2"]
transform = Transform( 5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0.5, 0 )
shape = SubResource( 4 )

[node name="AttaqueRange" type="Area" parent="."]
transform = Transform( 0.72, 0, 0, 0, 1, 0, 0, 0, 0.72, 0, -0.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="AttaqueRange"]
transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0.5, 0 )
shape = SubResource( 4 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="agent" type="NavigationAgent" parent="."]
path_desired_distance = 1.5
navigation_layers = 5
avoidance_enabled = true
radius = 1.5
neighbor_dist = 0.1

[node name="Zombie" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.8, 0, -6.99382e-08, 0, 0.8, 0, 6.99382e-08, 0, -0.8, 0, -1.5, 0 )

[node name="SpawningTimer" type="Timer" parent="."]
wait_time = 2.867

[node name="Blood" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.704563, 0 )
material_override = SubResource( 5 )
emitting = false
amount = 10
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )

[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_PathUpdateTimer_timeout"]
[connection signal="you_died_signal" from="Stats" to="." method="_on_Stats_you_died_signal"]
[connection signal="body_exited" from="AttaqueRange2" to="." method="_on_AttaqueRange2_body_exited"]
[connection signal="body_entered" from="AttaqueRange" to="." method="_on_AttaqueRange_body_entered"]
[connection signal="body_exited" from="AttaqueRange" to="." method="_on_AttaqueRange_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="velocity_computed" from="agent" to="." method="_on_agent_velocity_computed"]
[connection signal="timeout" from="SpawningTimer" to="." method="_on_SpaningTimer_timeout"]
